--- a/_xlarge.scss
+++ b/_xlarge.scss
@@ -1,6 +1,7 @@
-p {
+* {
     font-size: 16px;
 }
+
 
 .subheaders {
     font-weight: 400;
@@ -80,11 +81,16 @@ p {
     position: relative;
 }
 
+.landing__inner {
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+}
+
 .landing__valueprop {
     margin: 0;
     font-size: 24px;
     grid-column: 1 / -1;
-
+    max-height: 80rem;
 }
 
 .landing__valueprop_span1 {
@@ -112,13 +118,7 @@ p {
 /*--------INTRO-----------------*/
 
 .intro {
-    height: 50vh;
     padding: 0;
-
-    button {
-        grid-column: 5 / 7;
-        grid-row: 4 / 5;
-    }
 }
 
 .intro__inner {
@@ -127,28 +127,30 @@ p {
 }
 
 .intro__text {
-    grid-column: 3 / 10;
+    grid-column: 3 / 11;
     grid-row: 1 / 3;
-    padding: 1em 0 0 0;
-    font-size: 1.2em;
+    padding: 3rem 0 0 0;
+    font-size: 1rem;
+    max-width: 80rem;
 }
 
 .intro__image {
     grid-column: 7 / 12;
-    grid-row: 2 / 6;
-    width: 400px;
-    height: 400px;
+    grid-row: 1 / 6;
+    width: 25rem;
+    height: 25rem;
 
     img {
         width: 100%;
-        min-width: 320px;
-        max-width: 550px;
+        min-width: 25rem;
+        max-width: 25rem;
         opacity: 0.8;
         object-fit: cover;
     }
 }
 
 /*--------ABOUT-----------------*/
+
 
 .about__hero {
     background: $secondarybg;
@@ -160,6 +162,7 @@ p {
     grid-template-rows: repeat(6, auto);
     justify-content: center;
     margin: 4em 0 0 0;
+    max-width: 80rem;
 
     blockquote {
         font-size: 2.5em;
@@ -204,28 +207,30 @@ p {
 .about__text {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    p {
-        padding: 1.6em 10em;
-        text-align: left;
-        font-size: 1.2em;
-        grid-column: 2 / 12;
-    }
 
+    p {
+        padding: 0 0 1.6rem 0;
+        max-width: 80rem;
+        text-align: left;
+        grid-column: 3 / 11;
+    }
+}
+
+.about__us {
+    margin-bottom: 2rem;
 }
 
 .about__items {
     display: flex;
     flex-direction: column;
     height: 70vh;
-    width: 1000px;
-    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
 }
 
 .about__circle {
     margin: 0;
-
-
-    img {}
+    max-width: 80rem;
 
     p {
         font-size: 0.75em;
@@ -233,55 +238,51 @@ p {
     }
 }
 
-
-.about__circle1 {}
-
-.about__circle2 {}
-
-.about__circle3 {}
-
-.about__circle4 {}
-
-.about__circle5 {}
+.about__subscribe {
+    max-width: 64rem;
+}
 
 /*--------APPROACH-----------------*/
 
 .approach__about {
-    padding: 2em 13em;
-
-    p {
-        font-size: 1.2em;
-    }
+    padding: 2rem 13rem;
 }
 
-.approach__seasons {
-
-    p {
-        padding: 2em 10em;
-        font-size: 1.2em;
-    }
-}
 
 .approach__season1 {
-    height: 100vh;
+    width: 70%;
+    margin: 0 auto;
+    height: 60vh;
+    display: flex;
 
-    img {
-        object-fit: cover;
-    }
+}
+
+.approach__banner {
+    width: 100%;
+    display: flex;
+}
+
+.approach__intro {
+    width: 100%;
+    flex-direction: column;
+
 }
 
 .approach__upcoming {
 
     ul {
         margin: 0 0 1em 0;
+        display: flex;
+        width: 70%;
+        justify-content: center;
 
         li {
-            font-size: 1.1em;
+            margin: 1em;
         }
     }
 
     h3 {
-        font-size: 1.4em;
+        font-size: 1.4rem;
 
     }
 }
@@ -289,26 +290,26 @@ p {
 /*--------NETWORK SCIENCE-----------------*/
 
 .netscience {
-    align-items: stretch;
+    align-items: center;
     margin: 0 0 1em 0;
 }
 
+.netscience__inner_disc {
+    display: flex;
+}
+
 .netscience__text {
-
-    h4 {
-        padding: 1.5em 2em 0;
-        font-size: 1.2em;
-    }
-
+    display: flex;
+    flex-direction: column;
+    max-width: 80rem;
     p {
         padding: 1em 10em;
-        font-size: 1.2em;
     }
 }
 
 .netscience__apps {
     grid-template-columns: repeat(12, 1fr);
-
+    max-width: 80rem;
     h3 {
         justify-self: center;
         grid-column: 1 / -1;
@@ -390,4 +391,8 @@ p {
     color: #fff;
     align-items: center;
     margin: 0;
+}
+
+.footer__contact {
+    flex-direction: row;
 }
