--- a/style.scss
+++ b/style.scss
@@ -12,35 +12,30 @@
     text-decoration: none;
     line-height: 1.6;
     scroll-behavior: smooth;
-    font-size: 100%;
+    font-size: 12px;
 }
 
 body {
     font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
 }
 
 .cta__btn {
     border-radius: 20px;
     background: $secondarybg;
     color: #fff;
-    padding: .2em;
-    font-size: 0.8em;
+    padding: 0.2rem;
+    font-size: 0.8rem;
     outline: none;
     border: none;
-    width: 110px;
-    height: 28px;
-}
-
-p {
-    font-size: 0.8em;
+    width: 7rem;
+    height: 1.8rem;
 }
 
 .subheaders {
     font-weight: 300;
     text-transform: uppercase;
     align-self: center;
-    margin: 4em 0 0 0;
+    margin: 4.5rem 0 0 0;
     position: relative;
 
     &::after {
@@ -70,7 +65,7 @@ p {
     left: 0;
     right: 0;
     display: flex;
-    padding: 0 1em;
+    padding: 0 1rem;
     justify-content: center;
     align-items: center;
     background: #fff;
@@ -92,16 +87,16 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0.25em;
+    padding: 0.25rem;
     background: #fff;
     cursor: pointer;
 
     i {
-        font-size: 1.2em;
+        font-size: 1.2rem;
     }
 
     span {
-        font-size: 0.8em;
+        font-size: 0.8rem;
     }
 }
 
@@ -116,15 +111,15 @@ p {
     img {
         display: inline-block;
         position: absolute;
-        width: 160px;
-        max-width: 160px;
+        width: 10rem;
+        max-width: 10rem;
         transform: translateY(5px);
     }
 
 }
 
 .fa-home {
-    font-size: 1.6em;
+    font-size: 1.6rem;
     color: $primarycolor;
     cursor: pointer;
 }
@@ -156,13 +151,13 @@ p {
 }
 
 .header__menu {
-    padding: 0 2em;
+    padding: 0 2rem;
     text-align: center;
 }
 
 .header__menuitem {
     position: relative;
-    margin: 0 0 3em 0;
+    margin: 0 0 3rem 0;
     cursor: pointer;
     color: $primarycolor;
 }
@@ -176,8 +171,8 @@ p {
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 1.5em;
-    margin: 0 0 0.5em 0;
+    font-size: 1.5rem;
+    margin: 0 0 0.5rem 0;
     cursor: pointer;
 }
 
@@ -189,7 +184,7 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 3em 0 0 0;
+    margin: 3rem 0 0 0;
     position: relative;
 }
 
@@ -209,7 +204,7 @@ p {
 .landing__valueprop {
     margin: 0 auto;
     font-weight: 500;
-    font-size: 0.8em;
+    font-size: 0.8rem;
     letter-spacing: 2px;
     text-transform: uppercase;
     z-index: 1;
@@ -218,7 +213,7 @@ p {
     grid-column: 1 / -1;
     grid-row: 2 / 9;
     text-align: center;
-    line-height: 2;
+    line-height: 1.6;
 
     span {
         display: inline-block;
@@ -226,25 +221,25 @@ p {
 }
 
 .landing__valueprop_span1 {
-    font-size: 1.6em;
+    font-size: 1.6rem;
     font-weight: 700;
-    margin: 0 0 0.5em 0;
+    margin: 0 0 0.5rem 0;
 }
 
 .landing__valueprop_span2 {
-    font-size: 1.7em;
+    font-size: 1.7rem;
     font-weight: 700;
     margin: 0 0 1em 0;
 }
 
 .landing__valueprop_span3 {
-    font-size: 1.8em;
+    font-size: 1.8rem;
     font-weight: 900;
-    margin: 1em 0 0 0;
+    margin: 1rem 0 0 0;
 }
 
 .landing__valueprop_span4 {
-    font-size: 1.3em;
+    font-size: 1.3rem;
     font-weight: 700;
 }
 
@@ -283,7 +278,7 @@ p {
 .intro__text {
     grid-column: 1 / -1;
     grid-row: 2 / 6;
-    padding: 2em;
+    padding: 2rem;
 }
 
 .intro__image {
@@ -301,20 +296,22 @@ p {
 .about {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .about__inner_hero {
     background: $secondarybg;
     display: flex;
-    padding: 2em 0;
-    margin: 1em 0 0 0;
+    padding: 2rem 0;
+    margin: 1rem 0 0 0;
+    justify-content: center;
 }
 
 .about__hero {
 
     position: relative;
     display: grid;
-    padding: 1em 0 0 0;
+    padding: 1rem 0 0 0;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, auto);
     justify-content: center;
@@ -322,11 +319,11 @@ p {
 
     blockquote {
         color: #fff;
-        font-size: 1.5em;
+        font-size: 1.5rem;
         font-weight: bold;
         grid-column: 1 / 5;
         grid-row: 1 / 5;
-        margin: 0 0 0 1em;
+        margin: 0 0 0 1rem;
     }
 }
 
@@ -336,7 +333,7 @@ p {
     background-color: transparent;
     grid-column: 1 / -1;
     grid-row: 5 / 6;
-    margin: 0.5em 0 0 2em;
+    margin: 0.5rem 0 0 2rem;
 }
 
 .about__hero_role {
@@ -365,31 +362,32 @@ p {
     align-items: center;
 
     p {
-        padding: 1.6em;
+        padding: 1.6rem;
         text-align: center;
     }
 
 }
 
 .about__us.subheaders {
-    margin: 1em 0 0 0;
+    margin: 1rem 0 2rem 0;
 }
 
 .about__items {
     display: flex;
     flex-direction: column;
-    margin: 1em 0 0 0;
-    padding: 1em;
+    margin: 1rem 0 0 0;
+    padding: 1rem;
     position: relative;
+    max-width: 80rem;
 }
 
 .about__circle {
-    padding: 0.3em;
+    padding: 0.3rem;
     display: flex;
     flex-direction: row;
-    margin: 0 0 1em 0;
+    margin: 0 0 1rem 0;
     position: relative;
-    border-radius: 10px;
+    border-radius: 0.6rem;
 
 }
 
@@ -401,24 +399,59 @@ p {
     justify-content: center;
     align-items: center;
     justify-self: center;
-    clip-path: circle();
     background: #fff;
 }
 
 .about__circle_text {
     h4 {
-        font-size: 0.9em;
+        font-size: 0.9rem;
     }
 
     p {
-        font-size: 0.60em;
-        font-weight: bold;
-        padding: 0 2em;
+        font-size: 0.8rem;
+        font-weight: 300;
+        padding: 0 2rem;
         display: flex;
         text-align: center;
     }
 }
 
+.about__joinus {
+    display: flex;
+    justify-content: center;
+}
+
+.about__subscribe {
+    display: flex;
+    flex-direction: column;
+    padding: 0 1.5rem;
+    width: 90%;
+
+    input {
+        border: none;
+        border-radius: 5px;
+        padding: 0.3rem;
+        background: #FFE07A4A;
+    }
+
+    textarea {
+        border: none;
+        border-radius: 5px;
+        padding: 0.3rem;
+        background: #FFE07A4A;
+        resize: none;
+    }
+
+    button {
+        margin: 1rem 0 0 0;
+        background: $secondarybg;
+        border: none;
+        outline: none;
+        border-radius: 5px;
+        padding: 0.5rem;
+        color: #fff;
+    }
+}
 
 /*--------APPROACH-----------------*/
 
@@ -440,40 +473,49 @@ p {
 .approach__about {
     display: flex;
     flex-direction: column;
-    padding: 2em;
+    padding: 2rem;
 
     p {
-        margin: 0 0 1em 0;
+        margin: 0 0 1rem 0;
     }
 }
 
 .approach__banner {
-    background: $primarybg;
-    padding: 1em;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     letter-spacing: 2px;
+    justify-content: center;
 }
 
 .approach__seasons {
     display: flex;
     flex-direction: column;
+    background: $primarybg;
 
     p {
-        padding: 2em;
+        padding: 1rem 1rem 0.3rem;
     }
 }
 
 .approach__season1 {
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .approach__intro {
-    width: 80%;
-    box-shadow: 2px 2px 15px #d1ba67;
-    margin: auto;
-    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.approach__cta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
 }
 
 .approach__season1cards {
@@ -490,33 +532,47 @@ p {
     box-shadow: 0 0 15px 8px #eeeeee inset,
         0 0 15px #cacaca;
     ;
-    border-radius: 10px;
+    border-radius: 0.6rem;
 
 }
 
 .approach__upcoming {
-    padding: 2em;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
     ul {
-        margin: 0 0 1em 0;
+        margin: 0 0 1rem 0;
 
         li {
-            font-size: 0.9em;
-            margin: 0 0 0.5em 0;
+            font-size: 0.9rem;
+            margin: 0 0 0.5rem 0;
+            text-align: center;
+            width: 12rem;
+            height: 12rem;
+            background: #E3DFD1;
+            border-radius: 50%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
 
             i {
-                margin: 0 1em 0 0;
+                margin: 0 0 1rem 0;
+
+            }
+
+            h4 {
+                padding: 0.5rem;
             }
         }
     }
 
     h3 {
         font-weight: 600;
-        margin: 0 0 0.5em 0;
+        margin: 0 0 0.5rem 0;
     }
 }
 
@@ -529,22 +585,23 @@ p {
     align-items: center;
 }
 
-.netscience__inner_disc{
+.netscience__inner_disc {
     display: flex;
     flex-direction: column;
-} 
+}
+
 .netscience__text {
-    
+
     justify-content: center;
     align-items: center;
 
     h4 {
-        padding: 1.5em 2em 0;
-        font-size: 0.9em;
+        padding: 1.5rem 2rem 0;
+        font-size: 0.9rem;
     }
 
     p {
-        padding: 1.5em 2em 0;
+        padding: 1.5rem 2rem 0;
     }
 }
 
@@ -557,7 +614,7 @@ p {
         justify-self: center;
         grid-column: 1 / -1;
         grid-row: 1 / 2;
-        margin: 2em 0 1em 0;
+        margin: 2rem 0 1rem 0;
     }
 
     button {
@@ -572,21 +629,21 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 0 2.5em 0;
+    margin: 0 0 2.5rem 0;
 
     h5 {
-        font-size: 0.9em;
+        font-size: 0.9rem;
     }
 
     span {
         display: flex;
         justify-content: center;
-        width: 150px;
-        height: 150px;
+        width: 10rem;
+        height: 10rem;
         position: relative;
 
         img {
-            width: 150px;
+            width: 10rem;
             /* position: absolute;
             left: 50%;
             top: 50%;
@@ -596,11 +653,11 @@ p {
 
     p {
         word-wrap: break-word;
-        padding: 0 2em;
+        padding: 0 2rem;
         justify-self: center;
         text-align: center;
-        font-size: 0.8em;
-        height: 80px;
+        font-size: 0.8rem;
+        height: 5rem;
     }
 }
 
@@ -640,7 +697,7 @@ p {
     height: 40vh;
     max-height: 40vh;
     background: $secondarybg;
-    margin: 2em 0 1em 0;
+    margin: 2rem 0 1rem 0;
     display: flex;
     flex-direction: column;
     color: #fff;
@@ -651,42 +708,39 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0.5em 1em;
+    padding: 0.5rem 1rem;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+
     a {
-        margin: 0 0 0 0.5em;
+        margin: 0 0 0 0.5rem;
         text-decoration: none;
         color: #fff;
         border-bottom: 1px solid #fff;
     }
 
-    
+
 }
 
-p {
-        justify-self: center;
-        text-align: center;
-    }
 
 /*--------MEDIA QUERIES--------*/
 
 /*Medium screen-----------------------------*/
 
-@media screen and (min-width: 30.1em) {
+@media screen and (min-width: 30.1rem) {
     @import 'medium';
 }
 
 /*large screen-----------------------------*/
 
-@media screen and (min-width: 48.1em) {
+@media screen and (min-width: 48.1rem) {
     @import 'large';
 }
 
 /*xlarge screen-----------------------------*/
 
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 64rem) {
     @import 'xlarge';
 }
 
