--- a/styles/style.css
+++ b/styles/style.css
@@ -9,35 +9,30 @@
   text-decoration: none;
   line-height: 1.6;
   scroll-behavior: smooth;
-  font-size: 100%;
+  font-size: 12px;
 }
 
 body {
   font-family: "Montserrat", sans-serif;
-  font-size: 16px;
 }
 
 .cta__btn {
   border-radius: 20px;
   background: #03243C;
   color: #fff;
-  padding: 0.2em;
-  font-size: 0.8em;
+  padding: 0.2rem;
+  font-size: 0.8rem;
   outline: none;
   border: none;
-  width: 110px;
-  height: 28px;
-}
-
-p {
-  font-size: 0.8em;
+  width: 7rem;
+  height: 1.8rem;
 }
 
 .subheaders {
   font-weight: 300;
   text-transform: uppercase;
   align-self: center;
-  margin: 4em 0 0 0;
+  margin: 4.5rem 0 0 0;
   position: relative;
 }
 .subheaders::after {
@@ -66,7 +61,7 @@ p {
   left: 0;
   right: 0;
   display: flex;
-  padding: 0 1em;
+  padding: 0 1rem;
   justify-content: center;
   align-items: center;
   background: #fff;
@@ -87,15 +82,15 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0.25em;
+  padding: 0.25rem;
   background: #fff;
   cursor: pointer;
 }
 .header__hamburger i {
-  font-size: 1.2em;
+  font-size: 1.2rem;
 }
 .header__hamburger span {
-  font-size: 0.8em;
+  font-size: 0.8rem;
 }
 
 .header__logo {
@@ -109,13 +104,13 @@ p {
 .header__logo img {
   display: inline-block;
   position: absolute;
-  width: 160px;
-  max-width: 160px;
+  width: 10rem;
+  max-width: 10rem;
   transform: translateY(5px);
 }
 
 .fa-home {
-  font-size: 1.6em;
+  font-size: 1.6rem;
   color: #272727;
   cursor: pointer;
 }
@@ -146,13 +141,13 @@ p {
 }
 
 .header__menu {
-  padding: 0 2em;
+  padding: 0 2rem;
   text-align: center;
 }
 
 .header__menuitem {
   position: relative;
-  margin: 0 0 3em 0;
+  margin: 0 0 3rem 0;
   cursor: pointer;
   color: #272727;
 }
@@ -166,8 +161,8 @@ p {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 1.5em;
-  margin: 0 0 0.5em 0;
+  font-size: 1.5rem;
+  margin: 0 0 0.5rem 0;
   cursor: pointer;
 }
 
@@ -178,7 +173,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 3em 0 0 0;
+  margin: 3rem 0 0 0;
   position: relative;
 }
 
@@ -198,7 +193,7 @@ p {
 .landing__valueprop {
   margin: 0 auto;
   font-weight: 500;
-  font-size: 0.8em;
+  font-size: 0.8rem;
   letter-spacing: 2px;
   text-transform: uppercase;
   z-index: 1;
@@ -207,32 +202,32 @@ p {
   grid-column: 1/-1;
   grid-row: 2/9;
   text-align: center;
-  line-height: 2;
+  line-height: 1.6;
 }
 .landing__valueprop span {
   display: inline-block;
 }
 
 .landing__valueprop_span1 {
-  font-size: 1.6em;
+  font-size: 1.6rem;
   font-weight: 700;
-  margin: 0 0 0.5em 0;
+  margin: 0 0 0.5rem 0;
 }
 
 .landing__valueprop_span2 {
-  font-size: 1.7em;
+  font-size: 1.7rem;
   font-weight: 700;
   margin: 0 0 1em 0;
 }
 
 .landing__valueprop_span3 {
-  font-size: 1.8em;
+  font-size: 1.8rem;
   font-weight: 900;
-  margin: 1em 0 0 0;
+  margin: 1rem 0 0 0;
 }
 
 .landing__valueprop_span4 {
-  font-size: 1.3em;
+  font-size: 1.3rem;
   font-weight: 700;
 }
 
@@ -268,7 +263,7 @@ p {
 .intro__text {
   grid-column: 1/-1;
   grid-row: 2/6;
-  padding: 2em;
+  padding: 2rem;
 }
 
 .intro__image {
@@ -284,19 +279,21 @@ p {
 .about {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .about__inner_hero {
   background: #03243C;
   display: flex;
-  padding: 2em 0;
-  margin: 1em 0 0 0;
+  padding: 2rem 0;
+  margin: 1rem 0 0 0;
+  justify-content: center;
 }
 
 .about__hero {
   position: relative;
   display: grid;
-  padding: 1em 0 0 0;
+  padding: 1rem 0 0 0;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, auto);
   justify-content: center;
@@ -304,11 +301,11 @@ p {
 }
 .about__hero blockquote {
   color: #fff;
-  font-size: 1.5em;
+  font-size: 1.5rem;
   font-weight: bold;
   grid-column: 1/5;
   grid-row: 1/5;
-  margin: 0 0 0 1em;
+  margin: 0 0 0 1rem;
 }
 
 .about__quote {
@@ -317,7 +314,7 @@ p {
   background-color: transparent;
   grid-column: 1/-1;
   grid-row: 5/6;
-  margin: 0.5em 0 0 2em;
+  margin: 0.5rem 0 0 2rem;
 }
 
 .about__hero_role {
@@ -345,29 +342,30 @@ p {
   align-items: center;
 }
 .about__text p {
-  padding: 1.6em;
+  padding: 1.6rem;
   text-align: center;
 }
 
 .about__us.subheaders {
-  margin: 1em 0 0 0;
+  margin: 1rem 0 2rem 0;
 }
 
 .about__items {
   display: flex;
   flex-direction: column;
-  margin: 1em 0 0 0;
-  padding: 1em;
+  margin: 1rem 0 0 0;
+  padding: 1rem;
   position: relative;
+  max-width: 80rem;
 }
 
 .about__circle {
-  padding: 0.3em;
+  padding: 0.3rem;
   display: flex;
   flex-direction: row;
-  margin: 0 0 1em 0;
+  margin: 0 0 1rem 0;
   position: relative;
-  border-radius: 10px;
+  border-radius: 0.6rem;
 }
 
 .about__circle_img {
@@ -378,19 +376,52 @@ p {
   justify-content: center;
   align-items: center;
   justify-self: center;
-  clip-path: circle();
   background: #fff;
 }
 
 .about__circle_text h4 {
-  font-size: 0.9em;
+  font-size: 0.9rem;
 }
 .about__circle_text p {
-  font-size: 0.6em;
-  font-weight: bold;
-  padding: 0 2em;
+  font-size: 0.8rem;
+  font-weight: 300;
+  padding: 0 2rem;
   display: flex;
   text-align: center;
+}
+
+.about__joinus {
+  display: flex;
+  justify-content: center;
+}
+
+.about__subscribe {
+  display: flex;
+  flex-direction: column;
+  padding: 0 1.5rem;
+  width: 90%;
+}
+.about__subscribe input {
+  border: none;
+  border-radius: 5px;
+  padding: 0.3rem;
+  background: #FFE07A4A;
+}
+.about__subscribe textarea {
+  border: none;
+  border-radius: 5px;
+  padding: 0.3rem;
+  background: #FFE07A4A;
+  resize: none;
+}
+.about__subscribe button {
+  margin: 1rem 0 0 0;
+  background: #03243C;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  padding: 0.5rem;
+  color: #fff;
 }
 
 /*--------APPROACH-----------------*/
@@ -412,38 +443,47 @@ p {
 .approach__about {
   display: flex;
   flex-direction: column;
-  padding: 2em;
+  padding: 2rem;
 }
 .approach__about p {
-  margin: 0 0 1em 0;
+  margin: 0 0 1rem 0;
 }
 
 .approach__banner {
-  background: #FFDE70;
-  padding: 1em;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   letter-spacing: 2px;
+  justify-content: center;
 }
 
 .approach__seasons {
   display: flex;
   flex-direction: column;
+  background: #FFDE70;
 }
 .approach__seasons p {
-  padding: 2em;
+  padding: 1rem 1rem 0.3rem;
 }
 
 .approach__season1 {
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .approach__intro {
-  width: 80%;
-  box-shadow: 2px 2px 15px #d1ba67;
-  margin: auto;
-  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.approach__cta {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
 }
 
 .approach__season1cards {
@@ -458,29 +498,41 @@ p {
   height: 300px;
   background: #e0e0e0;
   box-shadow: 0 0 15px 8px #eeeeee inset, 0 0 15px #cacaca;
-  border-radius: 10px;
+  border-radius: 0.6rem;
 }
 
 .approach__upcoming {
-  padding: 2em;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 .approach__upcoming ul {
-  margin: 0 0 1em 0;
+  margin: 0 0 1rem 0;
 }
 .approach__upcoming ul li {
-  font-size: 0.9em;
-  margin: 0 0 0.5em 0;
+  font-size: 0.9rem;
+  margin: 0 0 0.5rem 0;
+  text-align: center;
+  width: 12rem;
+  height: 12rem;
+  background: #E3DFD1;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .approach__upcoming ul li i {
-  margin: 0 1em 0 0;
+  margin: 0 0 1rem 0;
+}
+.approach__upcoming ul li h4 {
+  padding: 0.5rem;
 }
 .approach__upcoming h3 {
   font-weight: 600;
-  margin: 0 0 0.5em 0;
+  margin: 0 0 0.5rem 0;
 }
 
 /*--------NETWORK SCIENCE-----------------*/
@@ -501,11 +553,11 @@ p {
   align-items: center;
 }
 .netscience__text h4 {
-  padding: 1.5em 2em 0;
-  font-size: 0.9em;
+  padding: 1.5rem 2rem 0;
+  font-size: 0.9rem;
 }
 .netscience__text p {
-  padding: 1.5em 2em 0;
+  padding: 1.5rem 2rem 0;
 }
 
 .netscience__apps {
@@ -517,7 +569,7 @@ p {
   justify-self: center;
   grid-column: 1/-1;
   grid-row: 1/2;
-  margin: 2em 0 1em 0;
+  margin: 2rem 0 1rem 0;
 }
 .netscience__apps button {
   grid-column: 1/-1;
@@ -530,20 +582,20 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 0 2.5em 0;
+  margin: 0 0 2.5rem 0;
 }
 .netscience__circle h5 {
-  font-size: 0.9em;
+  font-size: 0.9rem;
 }
 .netscience__circle span {
   display: flex;
   justify-content: center;
-  width: 150px;
-  height: 150px;
+  width: 10rem;
+  height: 10rem;
   position: relative;
 }
 .netscience__circle span img {
-  width: 150px;
+  width: 10rem;
   /* position: absolute;
   left: 50%;
   top: 50%;
@@ -551,11 +603,11 @@ p {
 }
 .netscience__circle p {
   word-wrap: break-word;
-  padding: 0 2em;
+  padding: 0 2rem;
   justify-self: center;
   text-align: center;
-  font-size: 0.8em;
-  height: 80px;
+  font-size: 0.8rem;
+  height: 5rem;
 }
 
 .netscience__circle1 {
@@ -593,7 +645,7 @@ p {
   height: 40vh;
   max-height: 40vh;
   background: #03243C;
-  margin: 2em 0 1em 0;
+  margin: 2rem 0 1rem 0;
   display: flex;
   flex-direction: column;
   color: #fff;
@@ -604,29 +656,24 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0.5em 1em;
+  padding: 0.5rem 1rem;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
 .footer__contact a {
-  margin: 0 0 0 0.5em;
+  margin: 0 0 0 0.5rem;
   text-decoration: none;
   color: #fff;
   border-bottom: 1px solid #fff;
-}
-
-p {
-  justify-self: center;
-  text-align: center;
 }
 
 /*--------MEDIA QUERIES--------*/
 /*Medium screen-----------------------------*/
 /*large screen-----------------------------*/
 /*xlarge screen-----------------------------*/
-@media screen and (min-width: 64em) {
-  p {
+@media screen and (min-width: 64rem) {
+  * {
     font-size: 16px;
   }
 
@@ -705,10 +752,16 @@ p {
     position: relative;
   }
 
+  .landing__inner {
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+  }
+
   .landing__valueprop {
     margin: 0;
     font-size: 24px;
     grid-column: 1/-1;
+    max-height: 80rem;
   }
 
   .landing__valueprop_span1 {
@@ -734,12 +787,7 @@ p {
 
   /*--------INTRO-----------------*/
   .intro {
-    height: 50vh;
     padding: 0;
-  }
-  .intro button {
-    grid-column: 5/7;
-    grid-row: 4/5;
   }
 
   .intro__inner {
@@ -748,22 +796,23 @@ p {
   }
 
   .intro__text {
-    grid-column: 3/10;
+    grid-column: 3/11;
     grid-row: 1/3;
-    padding: 1em 0 0 0;
-    font-size: 1.2em;
+    padding: 3rem 0 0 0;
+    font-size: 1rem;
+    max-width: 80rem;
   }
 
   .intro__image {
     grid-column: 7/12;
-    grid-row: 2/6;
-    width: 400px;
-    height: 400px;
+    grid-row: 1/6;
+    width: 25rem;
+    height: 25rem;
   }
   .intro__image img {
     width: 100%;
-    min-width: 320px;
-    max-width: 550px;
+    min-width: 25rem;
+    max-width: 25rem;
     opacity: 0.8;
     object-fit: cover;
   }
@@ -779,6 +828,7 @@ p {
     grid-template-rows: repeat(6, auto);
     justify-content: center;
     margin: 4em 0 0 0;
+    max-width: 80rem;
   }
   .about__hero blockquote {
     font-size: 2.5em;
@@ -822,75 +872,94 @@ p {
     grid-template-columns: repeat(12, 1fr);
   }
   .about__text p {
-    padding: 1.6em 10em;
+    padding: 0 0 1.6rem 0;
+    max-width: 80rem;
     text-align: left;
-    font-size: 1.2em;
-    grid-column: 2/12;
+    grid-column: 3/11;
+  }
+
+  .about__us {
+    margin-bottom: 2rem;
   }
 
   .about__items {
     display: flex;
     flex-direction: column;
     height: 70vh;
-    width: 1000px;
-    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
   }
 
   .about__circle {
     margin: 0;
+    max-width: 80rem;
   }
   .about__circle p {
     font-size: 0.75em;
     font-weight: bold;
   }
 
-  /*--------APPROACH-----------------*/
-  .approach__about {
-    padding: 2em 13em;
-  }
-  .approach__about p {
-    font-size: 1.2em;
+  .about__subscribe {
+    max-width: 64rem;
   }
 
-  .approach__seasons p {
-    padding: 2em 10em;
-    font-size: 1.2em;
+  /*--------APPROACH-----------------*/
+  .approach__about {
+    padding: 2rem 13rem;
   }
 
   .approach__season1 {
-    height: 100vh;
+    width: 70%;
+    margin: 0 auto;
+    height: 60vh;
+    display: flex;
   }
-  .approach__season1 img {
-    object-fit: cover;
+
+  .approach__banner {
+    width: 100%;
+    display: flex;
+  }
+
+  .approach__intro {
+    width: 100%;
+    flex-direction: column;
   }
 
   .approach__upcoming ul {
     margin: 0 0 1em 0;
+    display: flex;
+    width: 70%;
+    justify-content: center;
   }
   .approach__upcoming ul li {
-    font-size: 1.1em;
+    margin: 1em;
   }
   .approach__upcoming h3 {
-    font-size: 1.4em;
+    font-size: 1.4rem;
   }
 
   /*--------NETWORK SCIENCE-----------------*/
   .netscience {
-    align-items: stretch;
+    align-items: center;
     margin: 0 0 1em 0;
   }
 
-  .netscience__text h4 {
-    padding: 1.5em 2em 0;
-    font-size: 1.2em;
+  .netscience__inner_disc {
+    display: flex;
+  }
+
+  .netscience__text {
+    display: flex;
+    flex-direction: column;
+    max-width: 80rem;
   }
   .netscience__text p {
     padding: 1em 10em;
-    font-size: 1.2em;
   }
 
   .netscience__apps {
     grid-template-columns: repeat(12, 1fr);
+    max-width: 80rem;
   }
   .netscience__apps h3 {
     justify-self: center;
@@ -966,6 +1035,10 @@ p {
     color: #fff;
     align-items: center;
     margin: 0;
+  }
+
+  .footer__contact {
+    flex-direction: row;
   }
 }
 /*--------BACKGROUNDS--------*/
